# json5rw

./: .gitignore  README.md  __init__.py  pyproject.toml
src/: convert_standard.py  decoder.py  default_processing.py  dumper.py  encoder.py  loader.py  parser.py
tests/: dump.json  sample.json  test_dumper.py  test_loader.py
